@@ -1,3 +1,9 @@
+2009-03-27  Carlos Garcia Campos  <carlosgc@gsyc.es>
+
+	* pycvsanaly2/Database.py:
+
+	Optimize the action_files view by removing an unneeded join.
+	
 2009-03-26  Carlos Garcia Campos  <carlosgc@gsyc.es>
 
 	* pycvsanaly2/extensions/FileTypes.py:
